--- a/css/default.css
+++ b/css/default.css
@@ -10,7 +10,7 @@ ul, ol, li {
 }
 body {
   padding: 20px;
-  height: 100vh;
+  height: auto;
   width: 100vw;
   box-sizing: border-box;
 }
@@ -25,6 +25,7 @@ input {
 
 button {
   width: 40px;
+  min-width: 40px;
   height: 40px;
   border: 1px solid #cccccc;
   border-radius: 5px;
