--- a/css/contents.css
+++ b/css/contents.css
@@ -3,6 +3,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    row-gap: 10px;
     margin: auto;
   }
   .wrap > div {
@@ -10,7 +11,6 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    margin-bottom: 15px;
     box-sizing: border-box;
   }
   .input-wrap {
@@ -18,6 +18,10 @@
   }
   .input-wrap input {
     flex: 1;
+  }
+  .card-wrap {
+    flex-direction: column;
+    row-gap: 10px;;
   }
   .char_card {
     width: 100%;
@@ -40,13 +44,34 @@
     column-gap: 20px;
     width: 100%;
   }
+
+  .char_info > .image {
+    position: relative;
+  }
+  .char_info > .image img {
+    border: 1px solid #cecece;
+    border-radius: 5px;
+  }
+  .char_info > .image .mark {
+    position: absolute;
+    display: inline-block;
+    left: 5px;
+    bottom: -18px;
+    font-size: 12px;
+  }
+
   .char_info ul {
     display: flex;
     flex-direction: column;
     row-gap: 5px;
   }
-  .char_info ul li:first-child {
+  .char_info ul li[data-type="char-name"] {
     font-weight: 800;
+  }
+  .char_info ul li[data-type="char-name"] span+span {
+    font-size: 12px;
+    font-weight: 500;
+    margin-left: 3px;
   }
   
   .stat_card {
