--- a/css/contents.css
+++ b/css/contents.css
@@ -38,6 +38,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #ffffff;
 }
 
 .char_info {
@@ -51,17 +52,27 @@
 
 .char_info > .image {
   position: relative;
-}
-.char_info > .image img {
+  width: 100px;
+  height: 100px;
+  min-width: 100px;
   border: 1px solid #cecece;
   border-radius: 5px;
+  box-sizing: border-box;
+}
+.char_info > .image img {  
+  width: 100%;
+  height: 100%;
 }
 .char_info > .image .mark {
   position: absolute;
   display: inline-block;
   left: 0;
-  bottom: -12px;
+  bottom: -16px;
   font-size: 11px;
+}
+
+.char_info .info {
+  width: 100%;
 }
 
 .char_info ul {
@@ -295,4 +306,14 @@
   justify-content: center;
   padding-left: 5px;
   box-sizing: border-box;
+}
+
+
+
+/* */
+.class-image {
+  position: absolute;
+  top: 0;
+  width: 300px; /* 이미지의 너비 설정 */
+  height: 500px; /* 이미지의 높이 설정 */    
 }
