--- a/css/default.css
+++ b/css/default.css
@@ -8,30 +8,29 @@ ul, ol, li {
   padding: 0;
   margin: 0;
 }
-body {
-  padding: 20px;
-  height: auto;
+body { 
   width: auto;
+  height: auto;    
   box-sizing: border-box;
-  max-width: 330px;
-  margin: auto;
 }
 
 input {
   height: 40px;
-  border: 1px solid #cccccc;
+  border: 0;
   border-radius: 5px;
   box-sizing: border-box;
   padding: 5px;
+  background-color: #ffffff;
 }
 
 button {
   width: 40px;
   min-width: 40px;
   height: 40px;
-  border: 1px solid #cccccc;
+  border: 0;  
   border-radius: 5px;
   box-sizing: border-box;
+  background-color: #ffffff;
   cursor: pointer;
 }
 
