--- a/css/contents.css
+++ b/css/contents.css
@@ -239,6 +239,60 @@
 }
 
 
+.char_skill > .skill_chasu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30px;
+  border-bottom: 1px solid #999999;
+  cursor: pointer;
+}
+.char_skill > .skill_list {
+  display: flex;
+  flex-direction: column;
+}
+.char_skill > .skill_list > div {
+  display: flex;
+  column-gap: 10px;
+  align-items: center;
+  border-bottom: 1px solid #999999;
+  padding: 10px 0;
+}
+.char_skill .skill_img {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
+  row-gap: 5px;
+  text-align: center;
+}
+.char_skill .skill_img > img {
+  width: 32px;
+  height: 32px;
+}
+.char_skill .skill_img > span {
+  font-size: 12px;
+}
+.char_skill .skill_info {
+  display: flex;
+  flex-direction: column;
+  row-gap: 5px;
+  width: 80%;
+}
+.char_skill .skill_info div[data-type="skill_level"]{
+  font-size: 12px;
+}
+.char_skill .skill_info div[data-type="skill_effect"]{
+  font-size: 12px;
+}
+.char_skill .skill_info div[data-type="skill_description"]{
+  font-size: 11px;
+  white-space: pre-wrap;
+  padding-top: 5px;
+  border-top: 1px solid #999999;
+}
+
 .char_equipment > div {
   width: 100%;
   height: auto;
@@ -316,3 +370,23 @@
   column-gap: 5px;
 }
 
+
+
+
+.top-btn {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  color: #000000;
+  background-color: #ffffff;  
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+  border: 1px solid #999999;
+  box-sizing: border-box;
+}
